# matrix-creator-pocketsphinx

./: CMakeLists.txt  README.md
config/: mymodel.lm  train-text.txt
demos/: CMakeLists.txt  arc_demo.cpp  brazil_demo.cpp  clear_demo.cpp  everloop_demo.cpp  ipaddress_demo.cpp  pocketsphinx_demo.cpp  sensors_demo.cpp  sensors_status.cpp  timer_demo.cpp  uv_demo.cpp
